# try_mcp

./: .gitignore  README.md  REFACTOR_COMPARISON.md  pyproject.toml
.clinerules/: arch_and_coding_style.md  auto_notify.md  dev_env.md  env.md  execution_style.md  reduce_interaction.md  test.md
1a2b_mcp/: README.md  main.py
1a2b_mcp/game/: __init__.py  display.py  game_engine.py  validator.py
1a2b_mcp_server/: README.md  __init__.py  server.py
maze/: README.md  __init__.py  main.py  run_game.py
random_number_mcp/: __init__.py  server.py
snake_game/: README.md  __init__.py  main.py  run_game.py  test_game.py
snake_game/game/: __init__.py  display.py  input_handler.py  levels.py  snake_engine.py
