[project]
name = "random-number-mcp"
version = "0.1.0"
description = "A simple MCP server that generates random numbers"
authors = [{ name = "User", email = "user@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
random-number-mcp = "random_number_mcp.server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["random_number_mcp*"]
